--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,9 @@
 {
-    "extends": ["next/core-web-vitals", "prettier"],
+    "extends": ["next/core-web-vitals", "prettier", "plugin:@typescript-eslint/recommended"],
     "plugins": ["unicorn"],
     "rules": {
-        "no-unused-vars": [
-            "error",
-            {
-                "args": "after-used",
-                "caughtErrors": "none",
-                "ignoreRestSiblings": true,
-                "vars": "all"
-            }
-        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"],
         "prefer-const": "error",
         "react-hooks/exhaustive-deps": "error",
         "unicorn/filename-case": [
