--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@uidotdev/usehooks": "^2.4.1",
         "axios": "^1.6.3",
         "clsx": "^2.1.0",
+        "lucide-react": "^0.324.0",
         "negotiator": "^0.6.3",
         "next": "14.1.0",
         "next-i18n-router": "^5.2.0",
