--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@formatjs/intl-localematcher": "^0.5.2",
         "@headlessui/react": "^1.7.18",
+        "@tailwindcss/container-queries": "^0.1.1",
         "@typescript-eslint/eslint-plugin": "^6.20.0",
         "@uidotdev/usehooks": "^2.4.1",
         "axios": "^1.6.3",
