--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@typescript-eslint/eslint-plugin": "^6.20.0",
         "@uidotdev/usehooks": "^2.4.1",
         "axios": "^1.6.3",
+        "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "lucide-react": "^0.324.0",
         "next": "14.1.0",
@@ -30,6 +31,7 @@
         "zustand": "^4.4.7"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "@types/negotiator": "^0.6.3",
         "@types/node": "^20",
         "@types/react": "^18",
