--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev": "next dev --turbo",
+        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -28,6 +28,7 @@
         "sweetalert2": "^11.10.2",
         "sweetalert2-react-content": "^5.0.7",
         "tailwind-merge": "^2.2.0",
+        "zod": "^3.22.4",
         "zustand": "^4.4.7"
     },
     "devDependencies": {
