--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev": "next dev --turbo",
+        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -45,7 +45,6 @@
         "postcss": "^8",
         "prettier": "^3.1.0",
         "prettier-plugin-tailwindcss": "^0.5.7",
-        "server-only": "^0.0.1",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
     }
