--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@formatjs/intl-localematcher": "^0.5.2",
+        "@radix-ui/react-select": "^2.0.0",
         "@tailwindcss/container-queries": "^0.1.1",
         "@typescript-eslint/eslint-plugin": "^6.20.0",
         "@uidotdev/usehooks": "^2.4.1",
@@ -28,6 +29,7 @@
         "sweetalert2": "^11.10.2",
         "sweetalert2-react-content": "^5.0.7",
         "tailwind-merge": "^2.2.0",
+        "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4",
         "zustand": "^4.4.7"
     },
