--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@formatjs/intl-localematcher": "^0.5.2",
         "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slot": "^1.0.2",
         "@tailwindcss/container-queries": "^0.1.1",
         "@typescript-eslint/eslint-plugin": "^6.20.0",
         "@uidotdev/usehooks": "^2.4.1",
