--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@tailwindcss/container-queries": "^0.1.1",
         "@typescript-eslint/eslint-plugin": "^6.20.0",
-        "@uidotdev/usehooks": "^2.4.1",
         "axios": "^1.6.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -32,6 +32,7 @@
         "sweetalert2-react-content": "^5.0.7",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
+        "usehooks-ts": "^2.15.1",
         "zod": "^3.22.4",
         "zustand": "^4.4.7"
     },
