--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "cmdk": "0.2.1",
+        "cookies-next": "^4.1.1",
         "lucide-react": "^0.324.0",
         "next": "14.1.0",
         "next-i18n-router": "^5.2.0",
