--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-radio-group": "^1.1.3",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
@@ -38,6 +39,7 @@
         "react-icons": "^4.12.0",
         "react-svg": "^16.1.32",
         "react-tooltip": "^5.25.1",
+        "sharp": "^0.33.2",
         "sweetalert2": "^11.10.2",
         "sweetalert2-react-content": "^5.0.7",
         "tailwind-merge": "^2.2.0",
