--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=http://experimental.minestorecms.com
+NEXT_PUBLIC_WEBSTORE_NAME="MINESTORE PRO | OFFICIAL"
+NEXT_PUBLIC_WEBSTORE_DESCRIPTION="Official MineStoreCMS demo webstore"
